--- a/airs/content/pages/rules/source/173/index.adoc
+++ b/airs/content/pages/rules/source/173/index.adoc
@@ -173,96 +173,104 @@ execute.
 The adversary must have the ability to inject their script into a script that
 is likely to be executed.
 
-. [[r8]] link:https://cwe.mitre.org/data/definitions/20.html[CWE-20: Improper Input Validation].
+. [[r8]] link:http://capec.mitre.org/data/definitions/32.html[CAPEC-32: XSS Through HTTP Query Strings].
+An adversary embeds malicious script code in the parameters of an *HTTP* query
+string and convinces a victim to submit the *HTTP* request that contains the
+query string to a vulnerable web application.
+The web application then procedes to use the values parameters without properly
+validation them first and generates the HTML code that will be executed by the
+victim's browser.
+
+. [[r9]] link:https://cwe.mitre.org/data/definitions/20.html[CWE-20: Improper Input Validation].
 The product does not validate or incorrectly validates input that can affect
 the control flow or data flow of a program.
 
-. [[r9]] link:https://cwe.mitre.org/data/definitions/74.html[CWE-74: Injection].
+. [[r10]] link:https://cwe.mitre.org/data/definitions/74.html[CWE-74: Injection].
 The software constructs all or part of a command, data structure, or record
 using externally-influenced input from an upstream component,
 but it does not neutralize or incorrectly neutralizes special elements.
 
-. [[r10]] link:https://cwe.mitre.org/data/definitions/78.html[CWE-78: OS Command Injection].
+. [[r11]] link:https://cwe.mitre.org/data/definitions/78.html[CWE-78: OS Command Injection].
 The software constructs all or part of an OS command using
 externally-influenced input from an upstream component,
 but it does not neutralize or incorrectly neutralizes special elements that
 could modify the intended OS command.
 
-. [[r11]] link:https://cwe.mitre.org/data/definitions/79.html[​CWE-79: Cross-site Scripting].
+. [[r12]] link:https://cwe.mitre.org/data/definitions/79.html[​CWE-79: Cross-site Scripting].
 The software does not neutralize or incorrectly neutralizes user-controllable
 input before it is placed in output that is used as a web page that is served
  to other users.
 
-. [[r12]] link:https://cwe.mitre.org/data/definitions/80.html[CWE-80: Basic XSS].
+. [[r13]] link:https://cwe.mitre.org/data/definitions/80.html[CWE-80: Basic XSS].
 The software receives input from an upstream component,
 but it does not neutralize or incorrectly neutralizes special characters such
 as "<", ">", and "&" that could be interpreted as web-scripting elements.
 
-. [[r13]] link:https://cwe.mitre.org/data/definitions/89.html[CWE-89: SQL Injection].
+. [[r14]] link:https://cwe.mitre.org/data/definitions/89.html[CWE-89: SQL Injection].
 The software constructs all or part of an SQL command using
 externally-influenced input from an upstream component,
 but it does not neutralize or incorrectly neutralizes special elements that
 could modify the intended SQL command.
 
-. [[r14]] link:https://cwe.mitre.org/data/definitions/94.html[CWE-94: Code Injection].
+. [[r15]] link:https://cwe.mitre.org/data/definitions/94.html[CWE-94: Code Injection].
 The software constructs all or part of a code segment using
 externally-influenced input from an upstream component,
 but it does not neutralize or incorrectly neutralizes special elements that
 could modify the syntax or behavior of the intended code segment.
 
-. [[r15]] link:https://cwe.mitre.org/data/definitions/116.html[CWE-116: Improper Encoding or Escaping of Output].
+. [[r16]] link:https://cwe.mitre.org/data/definitions/116.html[CWE-116: Improper Encoding or Escaping of Output].
 The software prepares a structured message for communication with another
 component,
 but encoding or escaping of the data is either missing or done incorrectly.
 As a result, the intended structure of the message is not preserved.
 
-. [[r16]] link:https://cwe.mitre.org/data/definitions/138.html[CWE-138: Improper Neutralization of Special Elements].
+. [[r17]] link:https://cwe.mitre.org/data/definitions/138.html[CWE-138: Improper Neutralization of Special Elements].
 The software receives input from an upstream component,
 but it does not neutralize or incorrectly neutralizes special elements that
 could be interpreted as control elements or syntactic markers when they are
 sent to a downstream component.
 
-. [[r17]] link:https://cwe.mitre.org/data/definitions/147.html[CWE-147: Improper Neutralization of Input Terminators].
+. [[r18]] link:https://cwe.mitre.org/data/definitions/147.html[CWE-147: Improper Neutralization of Input Terminators].
 The software receives input from an upstream component,
 but it does not neutralize or incorrectly neutralizes special elements that
 could be interpreted as input terminators when they are sent to a downstream
 component.
 
-. [[r18]] link:https://cwe.mitre.org/data/definitions/159.html[CWE-159: Improper Handling of Invalid Use of Special Elements].
+. [[r19]] link:https://cwe.mitre.org/data/definitions/159.html[CWE-159: Improper Handling of Invalid Use of Special Elements].
 The product does not properly filter, remove, quote, or otherwise manage the
 invalid use of special elements in user-controlled input,
 which could cause adverse effect on its behavior and integrity.
 
-. [[r19]] link:https://cwe.mitre.org/data/definitions/602.html[CWE-602: Client-Side Enforcement of Server-Side Security].
+. [[r20]] link:https://cwe.mitre.org/data/definitions/602.html[CWE-602: Client-Side Enforcement of Server-Side Security].
 The software is composed of a server that relies on the client to implement a
 mechanism that is intended to protect the server.
 
-. [[r20]] link:https://cwe.mitre.org/data/definitions/643.html[CWE-643: XPath Injection].
+. [[r21]] link:https://cwe.mitre.org/data/definitions/643.html[CWE-643: XPath Injection].
 The software uses external input to dynamically construct an *XPath* expression
 used to retrieve data from an *XML* database,
 but it does not neutralize or incorrectly neutralizes that input.
 
-. [[r21]] link:https://cwe.mitre.org/data/definitions/943.html[CWE-943: Improper Neutralization of Special Elements in Data Query Logic].
+. [[r22]] link:https://cwe.mitre.org/data/definitions/943.html[CWE-943: Improper Neutralization of Special Elements in Data Query Logic].
 The application generates a query intended to access or manipulate data in a
 data store such as a database,
 but it does not neutralize or incorrectly neutralizes special elements that can
 modify the intended logic of the query.
 
-. [[r22]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A1-Injection[OWASP Top 10 A1:2017-Injection].
+. [[r23]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A1-Injection[OWASP Top 10 A1:2017-Injection].
 Injection flaws, such as **SQL**, **NoSQL**, **OS**, and *LDAP* injection,
 occur when untrusted data is sent to an interpreter as part of a command or
 query.
 The attacker's hostile data can trick the interpreter into executing unintended
 commands or accessing data without proper authorization.
 
-. [[r23]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A4-XML_External_Entities_(XXE)[OWASP Top 10 A4:2017-XML External Entities (XXE)].
+. [[r24]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A4-XML_External_Entities_(XXE)[OWASP Top 10 A4:2017-XML External Entities (XXE)].
 Many older or poorly configured *XML* processors evaluate external entity
 references within *XML* documents.
 External entities can be used to disclose internal files using the file *URI*
 handler, internal file shares, internal port scanning, remote code execution,
 and denial of service attacks.
 
-. [[r24]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A7-Cross-Site_Scripting_(XSS)[OWASP Top 10 A7:2017-Cross-Site Scripting (XSS)].
+. [[r25]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A7-Cross-Site_Scripting_(XSS)[OWASP Top 10 A7:2017-Cross-Site Scripting (XSS)].
 *XSS* flaws occur whenever an application includes untrusted data in a new web
 page without proper validation or escaping,
 or updates an existing web page with user-supplied data using a browser *API*
@@ -271,22 +279,22 @@ that can create *HTML* or **JavaScript**.
 hijack user sessions, deface web sites, or redirect the user to malicious
 sites.
 
-. [[r25]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A8-Insecure_Deserialization[OWASP Top 10 A8:2017-Insecure Deserialization].
+. [[r26]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A8-Insecure_Deserialization[OWASP Top 10 A8:2017-Insecure Deserialization].
 Insecure deserialization often leads to remote code execution.
 Even if deserialization flaws do not result in remote code execution,
 they can be used to perform attacks,
 including replay attacks, injection attacks, and privilege escalation attacks.
 
-. [[r26]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r27]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.5 Input and Output Architectural Requirements.(1.5.3)]
 Verify that input validation is enforced on a trusted service layer.
 
-. [[r27]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r28]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.5 Input and Output Architectural Requirements.(1.5.4)]
 Verify that output encoding occurs close to or by the interpreter for which it
 is intended.
 
-. [[r28]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r29]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.1 Input Validation Requirements.(5.1.1)]
 Verify that the application has defenses against HTTP parameter pollution
 attacks,
@@ -294,35 +302,35 @@ particularly if the application framework makes no distinction about the source
 of request parameters (*GET*, *POST*, cookies, headers,
 or environment variables).
 
-. [[r29]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r30]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.1 Input Validation Requirements.(5.1.3)]
 Verify that all input (*HTML* form fields, *REST* requests, *URL* parameters,
 *HTTP* headers, cookies, batch files, *RSS* feeds, etc) is validated using
 positive validation (*whitelisting*).
 
-. [[r30]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r31]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.1 Input Validation Requirements.(5.1.4)]
 Verify that structured data is strongly typed and validated against a defined
 schema including allowed characters, length and pattern
 (e.g. credit card numbers or telephone, or validating that two related fields
 are reasonable, such as checking that suburb and zip/postcode match).
 
-. [[r31]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r32]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.2 Sanitization and Sandboxing Requirements.(5.2.1)]
 Verify that all untrusted *HTML* input from *WYSIWYG* editors or similar is
 properly sanitized with an *HTML* sanitizer library or framework feature.
 
-. [[r32]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r33]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.2 Sanitization and Sandboxing Requirements.(5.2.2)]
 Verify that unstructured data is sanitized to enforce safety measures such as
 allowed characters and length.
 
-. [[r33]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r34]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.2 Sanitization and Sandboxing Requirements.(5.2.3)]
 Verify that the application sanitizes user input before passing to mail systems
 to protect against *SMTP* or *IMAP* injection.
 
-. [[r34]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r35]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.2 Sanitization and Sandboxing Requirements.(5.2.4)]
 Verify that the application avoids the use of **eval()** or other dynamic code
 execution features.
@@ -330,124 +338,124 @@ Where there is no alternative,
 any user input being included must be sanitized or sandboxed before being
 executed.
 
-. [[r35]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r36]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.2 Sanitization and Sandboxing Requirements.(5.2.5)]
 Verify that the application protects against template injection attacks by
 ensuring that any user input being included is sanitized or sandboxed.
 
-. [[r36]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r37]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.2 Sanitization and Sandboxing Requirements.(5.2.6)]
 Verify that the application protects against *SSRF* attacks,
 by validating or sanitizing untrusted data or *HTTP* file metadata,
 such as filenames and URL input fields,
 or using whitelisting of protocols, domains, paths and ports.
 
-. [[r37]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r38]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.2 Sanitization and Sandboxing Requirements.(5.2.7)]
 Verify that the application sanitizes, disables, or sandboxes user-supplied
 *SVG* scriptable content,
 especially as they relate to *XSS* resulting from inline scripts, and
 *foreignObject*.
 
-. [[r38]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r39]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.2 Sanitization and Sandboxing Requirements.(5.2.8)]
 Verify that the application sanitizes, disables, or sandboxes user-supplied
 scriptable or expression template language content,
 such as Markdown, *CSS* or *XSL* stylesheets, *BBCode*, or similar.
 
-. [[r39]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r40]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.3 Output encoding and Injection Prevention Requirements.(5.3.4)]
 Verify that data selection or database queries
 (e.g. *SQL*, *HQL*, *ORM*, *NoSQL*) use parameterized queries, *ORMs*,
 entity frameworks, or are otherwise protected from database injection attacks.
 
-. [[r40]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r41]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.3 Output encoding and Injection Prevention Requirements.(5.3.5)]
 Verify that where parameterized or safer mechanisms are not present,
 context-specific output encoding is used to protect against injection attacks,
 such as the use of *SQL* escaping to protect against *SQL* injection.
 
-. [[r41]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r42]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.3 Output encoding and Injection Prevention Requirements.(5.3.7)]
 Verify that the application protects against *LDAP* Injection vulnerabilities,
 or that specific security controls to prevent *LDAP* Injection have been
 implemented.
 
-. [[r42]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r43]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.3 Output encoding and Injection Prevention Requirements.(5.3.8)]
 Verify that the application protects against *OS* command injection and that
 operating system calls use parameterized *OS* queries or use contextual command
 line output encoding.
 
-. [[r43]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r44]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.3 Output encoding and Injection Prevention Requirements.(5.3.9)]
 Verify that the application protects against Local File Inclusion (*LFI*) or
 Remote File Inclusion (*RFI*) attacks.
 
-. [[r44]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r45]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.3 Output encoding and Injection Prevention Requirements.(5.3.10)]
 Verify that the application protects against *XPath* injection or *XML*
 injection attacks.
 
-. [[r45]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r46]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.4 Memory, String, and Unmanaged Code Requirements.(5.4.2)]
 Verify that format strings do not take potentially hostile input,
 and are constant.
 
-. [[r46]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r47]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.4 Memory, String, and Unmanaged Code Requirements.(5.4.3)]
 Verify that sign, range, and input validation techniques are used to prevent
 integer overflows.
 
-. [[r47]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r48]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.5 Deserialization Prevention Requirements.(5.5.2)]
 Verify that the application correctly restricts *XML* parsers to only use the
 most restrictive configuration possible and to ensure that unsafe features such
 as resolving external entities are disabled to prevent *XXE*.
 
-. [[r48]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r49]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V7.3 Log Protection Requirements.(7.3.1)]
 Verify that the application appropriately encodes user-supplied data to prevent
 log injection.
 
-. [[r49]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r50]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V12.1 File Upload Requirements.(12.1.2)]
 Verify that compressed files are checked for "zip bombs" - small input files
 that will decompress into huge files thus exhausting file storage limits.
 
-. [[r50]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r51]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V13.1 Generic Web Service Security Verification Requirements.(13.1.5)]
 Verify that requests containing unexpected or missing content types are
 rejected with appropriate headers
 (*HTTP* response status **406 Unacceptable** or
 **415 Unsupported Media Type**).
 
-. [[r51]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r52]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V13.2 RESTful Web Service Verification Requirements.(13.2.2)]
 Verify that *JSON* schema validation is in place and verified before accepting
 input.
 
-. [[r52]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r53]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V13.3 SOAP Web Service Verification Requirements.(13.3.1)]
 Verify that *XSD* schema validation takes place to ensure a properly formed
 *XML* document,
 followed by validation of each input field before any processing of that data
 takes place.
 
-. [[r53]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.3]
+. [[r54]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.3]
 Implement anti-spoofing measures to detect and block forged source IP addresses
 from entering the network.
 
-. [[r54]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.1]
+. [[r55]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.1]
 Address common coding vulnerabilities in software-development processes such as
 injection flaws, particularly *SQL* injection.
 Also consider *OS* Command Injection, *LDAP* and *XPath* injection flaws as
 well as other injection flaws.
 
-. [[r55]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.2]
+. [[r56]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.2]
 Address common coding vulnerabilities in software-development processes such as
 buffer overflows.
 
-. [[r56]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.7]
+. [[r57]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.7]
 Address common coding vulnerabilities in software-development processes such as
 cross-site scripting (*XSS*).
