--- a/airs/content/pages/rules/architecture/348/index.adoc
+++ b/airs/content/pages/rules/architecture/348/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/348/
 :category: architecture
 :description: This requirement establishes the importance of using consistent encoding across system components.
-:keywords: Consistent, Output, Encoding, Parsing, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: Consistent, Output, Encoding, Parsing, ASVS, CAPEC, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R348. Use consistent encoding
@@ -24,11 +24,25 @@ attacks.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/116.html[CWE-116: Improper Encoding or Escaping of Output].
+. [[r1]] link:http://capec.mitre.org/data/definitions/33.html[CAPEC-33: HTTP Request Smuggling].
+*HTTP* Request Smuggling results from the discrepancies in parsing *HTTP*
+requests between *HTTP* entities such as web caching proxies or application
+firewalls.
+Entities such as web servers, web caching proxies, application firewalls or
+simple proxies often parse *HTTP* requests in slightly different ways.
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/116.html[CWE-116: Improper Encoding or Escaping of Output].
 The product does not validate or incorrectly validates input that can affect
 the control flow or data flow of a program.
 
-. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r3]] link:https://cwe.mitre.org/data/definitions/444.html[CWE-444: HTTP Request Smuggling].
+When malformed or abnormal *HTTP* requests are interpreted by one or more
+entities in the data flow between the user and the web server,
+such as a proxy or firewall, they can be interpreted inconsistently,
+allowing the attacker to "smuggle" a request to one device without the other
+device being aware of it.
+
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V13.1 Generic Web Service Security Verification Requirements.(13.1.1)]
 Verify that all application components use the same encodings and parsers to
 avoid parsing attacks that exploit different *URI* or file parsing behavior
