skims\feat(back): #3353.1 missing ssl
Former-commit-id: f3cde07368abf51dafac0040734724887f4e99a4

--- a/skims/static/translations/findings/F052.yaml
+++ b/skims/static/translations/findings/F052.yaml
@@ -1,3 +1,6 @@
+src.lib_path.f052.java_properties_missing_ssl:
+  en: Missing SSL in {path}
+  es: Ausencia de SSL en {path}
 src.lib_path.f052.insecure_cipher.description:
   en: Use of insecure encryption algorithm in {path}
   es: Uso de algoritmo de cifrado inseguro en {path}
