--- a/airs/content/pages/rules/architecture/348/index.adoc
+++ b/airs/content/pages/rules/architecture/348/index.adoc
@@ -31,18 +31,24 @@ firewalls.
 Entities such as web servers, web caching proxies, application firewalls or
 simple proxies often parse *HTTP* requests in slightly different ways.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/116.html[CWE-116: Improper Encoding or Escaping of Output].
+. [[r2]] link:http://capec.mitre.org/data/definitions/43.html[CAPEC-43: Exploiting Multiple Input Interpretation Layers].
+An attacker supplies the target software with input data that contains
+sequences of special characters designed to bypass input validation logic.
+This exploit relies on the target making multiples passes over the input data
+and processing a "layer" of special characters with each pass.
+
+. [[r3]] link:https://cwe.mitre.org/data/definitions/116.html[CWE-116: Improper Encoding or Escaping of Output].
 The product does not validate or incorrectly validates input that can affect
 the control flow or data flow of a program.
 
-. [[r3]] link:https://cwe.mitre.org/data/definitions/444.html[CWE-444: HTTP Request Smuggling].
+. [[r4]] link:https://cwe.mitre.org/data/definitions/444.html[CWE-444: HTTP Request Smuggling].
 When malformed or abnormal *HTTP* requests are interpreted by one or more
 entities in the data flow between the user and the web server,
 such as a proxy or firewall, they can be interpreted inconsistently,
 allowing the attacker to "smuggle" a request to one device without the other
 device being aware of it.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V13.1 Generic Web Service Security Verification Requirements.(13.1.1)]
 Verify that all application components use the same encodings and parsers to
 avoid parsing attacks that exploit different *URI* or file parsing behavior
