--- a/airs/content/pages/rules/credentials/132/index.adoc
+++ b/airs/content/pages/rules/credentials/132/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/132/
 :category: credentials
 :description: This requirement establishes the importance of defining passphrases with at least 4 words and allowing them to be more than 64 characters long.
-:keywords: Password, Length, Passphrase, ASVS, CWE, NERC, NIST, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: Password, Length, Passphrase, ASVS, CAPEC, CWE, NERC, NIST, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R132. Passphrases with at least 4 words
@@ -27,11 +27,19 @@ and allow them to have 64 characters or more.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/521.html[CWE-521: Weak Password Requirements]
+. [[r1]] link:http://capec.mitre.org/data/definitions/49.html[CAPEC-49: Password Brute Forcing].
+In this attack, the adversary tries every possible value for a password until
+they succeed.
+A brute force attack, if feasible computationally, will always be successful
+because it will essentially go through all possible passwords given the
+alphabet used (lower case letters, upper case letters, numbers, symbols, etc.)
+and the maximum length of the password.
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/521.html[CWE-521: Weak Password Requirements]
 The product does not require that users should have strong passwords,
 which makes it easier for attackers to compromise user accounts.
 
-. [[r2]] link:https://www.nerc.com/pa/Stand/Reliability%20Standards/CIP-007-6.pdf[NERC CIP-007-6. B. Requirements and measures. R5.5]
+. [[r3]] link:https://www.nerc.com/pa/Stand/Reliability%20Standards/CIP-007-6.pdf[NERC CIP-007-6. B. Requirements and measures. R5.5]
 For password-only authentication for interactive user access,
 either technically or procedurally enforce the following password parameters:
 Password length that is, at least,  the lesser of eight characters or the
@@ -41,14 +49,14 @@ types of characters
 (e.g., uppercase alphabetic, lowercase alphabetic, numeric, non-alphanumeric)
 or the maximum complexity supported by the Cyber Asset.
 
-. [[r3]] link:https://pages.nist.gov/800-63-3/sp800-63b.html[NIST 800-63B 5.1.1.2 Memorized Secret Verifiers]
+. [[r4]] link:https://pages.nist.gov/800-63-3/sp800-63b.html[NIST 800-63B 5.1.1.2 Memorized Secret Verifiers]
 Verifiers SHOULD permit subscriber-chosen memorized secrets at least 64
 characters in length.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.1 Password Security Requirements.(2.1.2)]
 Verify that passwords 64 characters or longer are permitted.
 
-. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.2.3]
+. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.2.3]
 Passwords/passphrases must require a minimum length of at least seven
 characters or equivalent complexity and strength.
