--- a/airs/content/pages/rules/credentials/133/index.adoc
+++ b/airs/content/pages/rules/credentials/133/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/133/
 :category: credentials
 :description: This requirement establishes the importance of defining secure passwords with a length of at least 20 characters.
-:keywords: Credentials, Access, Password, Length, CWE, ASVS, NERC, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: Credentials, Access, Password, Length, ASVS, CAPEC, CWE, NERC, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R133. Passwords with at least 20 characters
@@ -18,11 +18,19 @@ System passwords must be at least *20* characters long.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/521.html[CWE-521: Weak Password Requirements]
+. [[r1]] link:http://capec.mitre.org/data/definitions/49.html[CAPEC-49: Password Brute Forcing].
+In this attack, the adversary tries every possible value for a password until
+they succeed.
+A brute force attack, if feasible computationally, will always be successful
+because it will essentially go through all possible passwords given the
+alphabet used (lower case letters, upper case letters, numbers, symbols, etc.)
+and the maximum length of the password.
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/521.html[CWE-521: Weak Password Requirements]
 The product does not require that users should have strong passwords,
 which makes it easier for attackers to compromise user accounts.
 
-. [[r2]] link:https://www.nerc.com/pa/Stand/Reliability%20Standards/CIP-007-6.pdf[NERC CIP-007-6. B. Requirements and measures. R5.5]
+. [[r3]] link:https://www.nerc.com/pa/Stand/Reliability%20Standards/CIP-007-6.pdf[NERC CIP-007-6. B. Requirements and measures. R5.5]
 For password-only authentication for interactive user access,
 either technically or procedurally enforce the following password parameters:
 Password length that is, at least,  the lesser of eight characters or the
@@ -32,10 +40,10 @@ types of characters
 (e.g., uppercase alphabetic, lowercase alphabetic, numeric, non-alphanumeric)
 or the maximum complexity supported by the Cyber Asset.
 
-. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.1 Password Security Requirements.(2.1.1)]
 Verify that user set passwords are at least 12 characters in length.
 
-. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.2.3]
+. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.2.3]
 Passwords/passphrases must require a minimum length of at least seven
 characters or equivalent complexity and strength.
